--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <div class="container">
         <div class="section-title between style-2">
             <div>
-                <h2 class="title section-description-lg mb-3">Temukan dokter favoritmu</h2>
+                <h2 class="title section-description-lg mb-3">Temukan Haruto</h2>
                 
                 <form method="post" id="form-search" class="search-form">
                     <input type="text" name="search_dokter" id="search_dokter" placeholder="Ketik nama dokter atau lihat jadwal dokter" class="search-form-input form-control feed-search" required="" autocomplete="off" autocorrect="off">
